<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".screens.search.PokemonSearchFragment"
        style="@style/ll_centerH_vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/ll_centerH_vertical"
            android:layout_marginTop="@dimen/s"
            android:layout_marginBottom="@dimen/s">
            <EditText
                android:id="@+id/search_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:selectAllOnFocus="true"
                android:hint="@string/search_hint"/>
            <Button
                android:id="@+id/search_pokemon_button"
                style="@style/style_button"
                android:text="@string/search_for_a_pokemon" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/pokemon_recycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

    </LinearLayout>
</layout>
