<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".screens.MainActivity"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/logo_iv"
            android:layout_width="match_parent"
            android:layout_height="@dimen/xl"
            android:src="@drawable/pokemon_logo" />

        <TextView
            android:id="@+id/explanation_tv"
            style="@style/home_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome_text" />

        <Button
            android:id="@+id/search_button"
            style="@style/style_button"
            android:text="@string/pokemon" />

    </LinearLayout>
</layout>
